<resources>
    <string name="app_name">ThemesMenus</string>
    <string name="title_activity_2">Add New Trip</string>
    <string name="activity2">Activity 2</string>
    <string name="activity3">Activity 3</string>
    <string name="trip_list_activity">Trip List</string>
    <string name="trip_details_activity">Trip Details Activity</string>
    <string name="title_activity_3">Activity3</string>
    <string name="go_back">Back</string>
    <string name="go_to_3">Travel Assist</string>
    <string name="go_to_2">Add New Trip</string>
    <string name="banner_title">Trip Planner</string>
    <string name="destination_label">Destination:</string>
    <string name="destination_hint">Enter destination</string>
    <string name="date_label">Date:</string>
    <string name="participants_label">Participants:</string>
    <string name="participants_hint">Enter participants</string>
    <string name="budget_label">Budget:</string>
    <string name="budget_hint">Enter budget</string>
    <string name="save_trip">Save Trip</string>
    <string name="people_count">Number of People:</string>
    <string name="count_hint">0</string>
    <string name="minus_text">-</string>
    <string name="plus_text">+</string>
    <string name="travel_assistant">Travel Assistant</string>
    <string name="travel_checklist">Travel Checklist</string>
    <string name="passport">Passport</string>
    <string name="tickets">Tickets</string>
    <string name="emergency_contacts">Emergency Contacts</string>
    <string name="emergency_contact_hint">Emergency Contact Number</string>
    <string name="emergency_contact_select">Select emergency contact</string>
    <string name="new_item_hint">Enter new item</string>
    <string name="add_item">Add</string>
    <string name="visa">Visa</string>
    <string name="hotel">Hotel Booking</string>
    <string name="insurance">Travel Insurance</string>
    <string name="barcelona">Barcelona</string>
    <string name="miami">Miami</string>
    <string name="paris">Paris</string>
    <string name="qatar">Qatar</string>
    <string name="view_trips">View Trips</string>
    <string name="search_location_hint">Search location</string>
    <string name="search_button">Search</string>
    <string name="map_view_description">Map showing travel locations and routes</string>
    <string name="directions_placeholder">Directions...</string>
</resources>