<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.assignment1.MainActivity">

    <!--    layout_constraintBottom_toBottomOf=parent-->
    <!--    layout_constraintLeft_toLeftOf=parent-->
    <!--    layout_constraintRight_toRightOf=parent-->
    <!--    layout_constraintTop_toTopOf=parent-->
    <!-- Banner Section -->

    <TextView
        android:id="@+id/textViewBarcelona"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="24dp"
        android:text="@string/barcelona"
        android:textStyle="bold"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:gravity="center"
        style="@style/OuterLinkStyle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textViewParis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="92dp"
        android:layout_marginTop="20dp"
        android:text="@string/paris"
        android:textStyle="bold"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:gravity="center"
        style="@style/OuterLinkStyle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <TextView
        android:id="@+id/textViewQatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="92dp"
        android:text="@string/qatar"
        android:textStyle="bold"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:gravity="center"
        style="@style/OuterLinkStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <TextView
        android:id="@+id/textViewMiami"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="88dp"
        android:text="@string/miami"
        android:textStyle="bold"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:gravity="center"
        style="@style/OuterLinkStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="44dp"
        android:src="@drawable/qatar"
        android:contentDescription="@string/qatar"
        style="@style/OuterLinkStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="100dp"
        android:src="@drawable/paris"
        android:contentDescription="@string/paris"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="44dp"
        android:src="@drawable/miami"
        android:contentDescription="@string/miami"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/banner_title" />

    <TextView
        android:id="@+id/banner_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/banner_title"
        style="@style/HeaderBannerStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/goTo3Button"
        style="@style/MyButton"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="16dp"
        android:text="@string/travel_assistant"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tripListButton"
        app:layout_constraintHorizontal_chainStyle="packed" />

    <Button
        android:id="@+id/tripListButton"
        style="@style/ViewTripsButton"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:layout_marginBottom="32dp"
        android:layout_marginStart="16dp"
        android:text="@string/trip_list_activity"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/goTo3Button"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="52dp"
        android:contentDescription="@string/barcelona"
        android:src="@drawable/barcelona"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/banner_title" />

</androidx.constraintlayout.widget.ConstraintLayout>